[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nephased"                     
version = "0.0.31"                     
description = "A BERT-based text sentiment classification pipeline for Nepali"  
readme = "README.md"                  
license = { text = "MIT" }      
authors = [      
  { name = "Angel Tamang", email = "tamangangel2057@gmail.com" },
  { name = "Aadarsha Regmi", email = "aadarsha.regmi11@gmail.com"},
  { name = "Gaurav Maharjan", email = "gauravmaharjan1@gmail.com"},
  { name = "Anil Bhatta", email = "bhattaanil1234@gmail.com"}
]
keywords = ["nlp", "transformers", "bert", "nepali"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "torch>=2.5.1",
  "transformers>=4.0.0",
  "nepali-stemmer>=0.0.2",
  "nltk>=3.9.1",
]
requires-python = ">=3.10"

# URLs for your package/project
[project.urls]
"Homepage" = "https://github.com/angeltamang123/nephased"
"Source" = "https://github.com/angeltamang123/nephased"